# vimbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: package-lock.json  package.json
src/static/css/: styles.css
src/static/js/: ctrlEnterSubmit.js  main.js
src/templates/: disclaimer.html  how_it_works.html  index.html  response.html
src/vimbot/: config.py  database.py  db.py  dependencies.py  email_utils.py  main.py  models.py
src/vimbot/bot/: init_rag.py  process_response.py  prompt.txt  query.py
src/vimbot/bot/tmp/: out.txt
src/vimbot/bot/utils/: from_url_to_embeddings_pipeline.py
src/vimbot/bot/utils/docs_pipeline/: docs_to_sqlite.py  embeddings_to_sqlite.py  get_docs.py  make_embeddings.py  sqlite_to_embedding_files.py
src/vimbot/routers/: feedback.py  index_api.py  queries.py  root.py
tests/: test_database.py  test_email_utils.py  test_process_response.py
